# seifrng

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/Modules/: FindCrypto++.cmake  FindOpenCV.cmake
commonInclude/: randomSource.h
fileCryptopp/: CMakeLists.txt
fileCryptopp/include/: fileCryptopp.h
fileCryptopp/src/: fileCryptopp.cpp  runfilecrypto.c++
helpers/: printByteProbs.c++
interfaceCamera/: CMakeLists.txt
interfaceCamera/include/: interfaceCamera.h
interfaceCamera/src/: interfaceCamera.cpp  runcamera.c++
interfaceMicrophone/: CMakeLists.txt
interfaceMicrophone/include/: interfaceMicrophone.h
interfaceMicrophone/src/: interfaceMicrophone.cpp  runmicrophone.c++
interfaceOSRNG/: CMakeLists.txt
interfaceOSRNG/include/: interfaceOSRNG.h
interfaceOSRNG/src/: interfaceOSRNG.cpp  runosrng.c++
isaacRandomPool/: CMakeLists.txt
isaacRandomPool/include/: ignoreCamera.hpp  ignoreMicrophone.hpp  isaac.hpp  isaacRandomPool.h
isaacRandomPool/src/: isaacRandomPool.cpp  runisaacrandompool.c++
seedGenerator/: CMakeLists.txt
seedGenerator/include/: seedGenerator.h
seedGenerator/src/: seedGenerator.cpp
